@@ -1,6 +1,7 @@
 requires 'perl' => '5.006';
 requires 'Carp';
 requires 'Scalar::Util';
+requires 'Sub::Util' => '1.40';
 test_requires 'overload';
 test_requires 'Test::More' => '0.88';
 test_requires 'Test::Warnings';
