@@ -1,4 +1,6 @@
 {{$NEXT}}
+  - Add install_subs import option to install autoloaded subroutines to the
+    package
 
 0.004     2017-02-20 14:15:44 EST
   - Skip autoloading DESTROY method, instead of installing one
